# SPDX-License-Identifier: MIT
# SPDX-FileCopyrightText: 2022 Sascha Brawer <sascha@brawer.ch>

[package]
name = "brandy-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
bitvec = "1.0.1"
byteorder = "1.4.3"
clap = { version = "4.0.18", features = ["derive", "color"] }
extsort = "0.4.2"
memmap = "0.7.0"
osmpbf = "0.2.8"
rayon = "1.5.3"
